# sBIF

./: CMakeLists.txt  README.md  check.cpp  check.h  compile.sh  drosChr2L.sh  dumping.cpp  dumping.h  help.cpp  help.h  loading.cpp  loading.h  main.cpp  optimization.cpp  optimization.h  parsingargs.cpp  parsingargs.h
data/: S2Rplus_spec_chr2L_11M_12M.txt
example/: drosChr2L.sh
src/: check.cpp  check.h  dumping.cpp  dumping.h  help.cpp  help.h  loading.cpp  loading.h  main.cpp  optimization.cpp  optimization.h  parsingargs.cpp  parsingargs.h
